WIP Initial keyboard commit based on a95a2152

--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -10,8 +10,10 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/resultLayout"
-        android:layout_alignParentTop="true"
+        android:layout_above="@id/searchEditLayout"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="false"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
         android:layout_marginRight="10dp"
@@ -23,11 +25,12 @@
         android:id="@+id/resultLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@id/externalFavoriteBar"
+        android:layout_above="@id/searchEditLayout"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="false"
         android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginBottom="10dp"
         android:background="?attr/listBackgroundColor"
@@ -66,6 +69,7 @@
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginBottom="10dp"
+        android:layout_marginTop="10dp"
         android:animateLayoutChanges="true"
         android:background="?attr/searchBackgroundColor"
         android:baselineAligned="false"
@@ -81,7 +85,9 @@
         android:id="@+id/searchEditLayout"
         android:layout_width="match_parent"
         android:layout_height="@dimen/bar_height"
-        android:layout_above="@id/externalFavoriteBar"
+        android:layout_above="@id/keyboard123"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginBottom="10dp"
@@ -200,9 +206,36 @@
         layout="@layout/main_kissbar"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@id/externalFavoriteBar"
+        android:layout_above="@id/keyboard123"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
         android:layout_margin="10dp"
         android:visibility="gone"
         tools:ignore="DuplicateIncludedIds" />
+
+    <android.inputmethodservice.KeyboardView
+        android:id="@+id/keyboard4"
+        android:layout_marginBottom="18dp"
+        android:layout_width="match_parent"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_height="wrap_content"
+        android:background="@android:color/transparent" />
+
+    <android.inputmethodservice.KeyboardView
+        android:id="@+id/keyboard123"
+        android:layout_width="match_parent"
+        android:layout_above="@id/externalFavoriteBar"
+        android:layout_marginBottom="0dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:paddingBottom="0dp"
+        android:layout_height="wrap_content"
+        android:background="@android:color/transparent" />
 
 </RelativeLayout>
