--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -59,7 +59,9 @@
         android:id="@+id/externalFavoriteBar"
         android:layout_width="match_parent"
         android:layout_height="@dimen/favorite_height"
-        android:layout_above="@id/searchEditLayout"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentBottom="true"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginBottom="10dp"
@@ -78,9 +80,7 @@
         android:id="@+id/searchEditLayout"
         android:layout_width="match_parent"
         android:layout_height="@dimen/bar_height"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentBottom="true"
+        android:layout_above="@id/externalFavoriteBar"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginBottom="10dp"
@@ -199,10 +199,7 @@
         layout="@layout/main_kissbar"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@android:id/list"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentBottom="true"
+        android:layout_above="@id/externalFavoriteBar"
         android:layout_margin="10dp"
         android:visibility="gone"
         tools:ignore="DuplicateIncludedIds" />
