--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -60,7 +60,9 @@
         android:id="@+id/externalFavoriteBar"
         android:layout_width="match_parent"
         android:layout_height="@dimen/favorite_height"
-        android:layout_above="@id/searchEditLayout"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentBottom="true"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginBottom="10dp"
@@ -79,9 +81,7 @@
         android:id="@+id/searchEditLayout"
         android:layout_width="match_parent"
         android:layout_height="@dimen/bar_height"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentBottom="true"
+        android:layout_above="@id/externalFavoriteBar"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginBottom="10dp"
@@ -200,10 +200,7 @@
         layout="@layout/main_kissbar"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@android:id/list"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentBottom="true"
+        android:layout_above="@id/externalFavoriteBar"
         android:layout_margin="10dp"
         android:visibility="gone"
         tools:ignore="DuplicateIncludedIds" />
