--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -12,11 +12,9 @@
         android:layout_above="@id/searchEditLayout"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentTop="false"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginRight="10dp"
         android:layout_marginBottom="10dp"
         android:gravity="center_horizontal"
         android:orientation="vertical" />
@@ -28,6 +26,8 @@
         android:layout_above="@id/searchEditLayout"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentTop="false"
         android:layout_marginStart="@dimen/list_margin_horizontal"
         android:layout_marginLeft="@dimen/list_margin_horizontal"
